--- a/index.html
+++ b/index.html
@@ -9,18 +9,13 @@
     <style>
 html {
   font-family: sans-serif;
-  background-color: #333333;
+  background-color: black;
+  color: white;
 }
 a {
-  color: #49fb35;
-}
-.white {
-  background: #49fb35;
-  color: white;
-  padding: 2px;
+  color: #20C20E;
 }
 #contact {
-  color: white;
   display: inline-block;
   padding: 2px;
 }
@@ -32,13 +27,11 @@ a {
 #title {
   font-weight: bold;
   font-size: 0.8em;
-  color: #49fb35;
   text-decoration: none;
 }
 #blurb {
   font-weight: bold;
   font-size: 5em;
-  color: white;
   display: inline-block;
   padding: 10px;
 }
@@ -57,7 +50,7 @@ a {
 	  <div id="main">
             <h1 id="blurb">Build your dream</h1>
 	    <h3>A world class startup consultancy</h3>
-	    <h5>By former operators at <span class="white">Micro</span></h5>
+	    <h5>By former operators at <a href="https://micro.dev">Micro</a></h5>
 	    <h4>Get in <a href="mailto:hello@crufters.com" id="contact">touch</a></h4>
 	  </div>
       </div>
