--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <style>
 html {
   font-family: sans-serif;
-  background-color: black;
-  color: white;
+  background-color: #22212c;
+  color: #fff;
 }
 a {
   color: #20C20E;
@@ -33,7 +33,6 @@ a {
   font-weight: bold;
   font-size: 5em;
   display: inline-block;
-  padding: 10px;
 }
 @media only screen and (max-width: 600px) {
   #content {
