--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
 html {
-  font-family: sans-serif;
+  font-family: Inconsolata, monospace;
   background-color: #22212c;
   color: #fff;
 }
