--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@ a {
   margin: 0 auto;
   padding: 5em;
 }
+#cursor {
+  color: #fff;
+}
 #title {
   font-weight: bold;
   font-size: 0.8em;
@@ -31,7 +34,7 @@ a {
 }
 #blurb {
   font-weight: bold;
-  font-size: 5em;
+  font-size: 3em;
   display: inline-block;
 }
 @media only screen and (max-width: 600px) {
@@ -44,13 +47,13 @@ a {
   <body>
       <div id="content">
 	  <div id="header">
-	      <h1><a href="/" id="title">CRUFTERS |</a></h1>
+		  <h1><a href="/" id="title">CRUFTERS <span id="cursor">|</span></a></h1>
 	  </div>
 	  <div id="main">
             <h1 id="blurb">Build your dream</h1>
-	    <h3>A world class startup consultancy</h3>
+	    <h3>A world class startup hacker group</h3>
 	    <h5>By former operators at <a href="https://micro.dev">Micro</a></h5>
-	    <h4>Get in <a href="mailto:hello@crufters.com" id="contact">touch</a></h4>
+	    <h4>Email us to <a href="mailto:hello@crufters.com" id="contact">start</a> your new project.</h4>
 	  </div>
       </div>
   </body>
