--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@ a {
   font-size: 0.8em;
   text-decoration: none;
 }
+#title::after {
+    content: "";
+    width: 4px;
+    height: 20px;
+    background: #fff;
+    vertical-align: top;
+    margin-top: 2px;
+    margin-left: 5px;
+    display: inline-block;
+}
 #blurb {
   font-weight: bold;
   font-size: 3em;
@@ -47,7 +57,7 @@ a {
   <body>
       <div id="content">
 	  <div id="header">
-		  <h1><a href="/" id="title">CRUFTERS<span id="cursor">|</span></a></h1>
+		  <h1><a href="/" id="title">CRUFTERS</h1>
 	  </div>
 	  <div id="main">
             <h1 id="blurb">Build your dream</h1>
