--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@ a {
 #cursor {
   color: #fff;
 }
+#desc {
+  color: grey;
+}
 #title {
   font-weight: bold;
   font-size: 0.8em;
@@ -61,7 +64,7 @@ a {
 	  </div>
 	  <div id="main">
             <h1 id="blurb">Build your dream</h1>
-	    <h3>A world class startup hacker group</h3>
+	    <h3 id="desc">A world class startup hacker group</h3>
 	    <h5>By former operators at <a href="https://micro.dev">Micro</a></h5>
 	    <h4>Email us to <a href="mailto:hello@crufters.com" id="contact">start</a> your new project.</h4>
 	  </div>
