--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ a {
   font-size: 0.8em;
   text-decoration: none;
 }
-#title::after {
+h1#title::after {
     content: "";
     width: 4px;
     height: 20px;
