--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ a {
   <body>
       <div id="content">
 	  <div id="header">
-		  <h1><a href="/" id="title">CRUFTERS</h1>
+		  <h1><a href="/" id="title">CRUFTERS</a></h1>
 	  </div>
 	  <div id="main">
             <h1 id="blurb">Build your dream</h1>
