--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@ a {
   font-size: 0.8em;
   text-decoration: none;
 }
+#title::after {
+  content: "";
+  width: 4px;
+  height: 20px;
+  margin-top: 5px;
+  margin-left: 5px;
+  background: #fff;
+  display: inline-block;
+}
 #blurb {
   font-weight: bold;
   font-size: 3em;
