--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@ a {
   content: "";
   width: 4px;
   height: 20px;
-  margin-top: 5px;
-  margin-left: 5px;
+  margin-top: 3px;
+  margin-left: 3px;
   background: #fff;
   display: inline-block;
+  vertical-align: top;
 }
 #blurb {
   font-weight: bold;
