--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ a {
   margin-left: 3px;
   background: #fff;
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
 }
 #blurb {
   font-weight: bold;
