--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@ a {
 #title::after {
   content: "";
   width: 3px;
-  height: 25px;
+  height: 20px;
   margin-top: 3px;
   margin-left: 3px;
   background: #fff;
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: top;
 }
 #blurb {
   font-weight: bold;
