--- a/index.html
+++ b/index.html
@@ -43,11 +43,17 @@ a {
   background: #fff;
   display: inline-block;
   vertical-align: top;
+  animation: cursor-blink 1.5s steps(2) infinite;
 }
 #blurb {
   font-weight: bold;
   font-size: 3em;
   display: inline-block;
+}
+@keyframes cursor-blink {
+  0% {
+    opacity: 0;
+  }
 }
 @media only screen and (max-width: 600px) {
   #content {
