--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
 html {
   font-family: Inconsolata, monospace;
-  background-color: #22212c;
+  background-color: #111315;
   color: #fff;
 }
 a {
