--- a/index.html
+++ b/index.html
@@ -1,78 +1,87 @@
 <html>
   <head>
     <title>Crufters | Build your dream</title>
-    <meta charset="UTF-8">
-    <meta name="description" content="Startup consultants who build your dreams">
-    <meta name="keywords" content="startups, consulting, engineering">
-    <meta name="author" content="Crufters">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Startup consultants who build your dreams"
+    />
+    <meta name="keywords" content="startups, consulting, engineering" />
+    <meta name="author" content="Crufters" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
-html {
-  font-family: Inconsolata, monospace;
-  background-color: #111315;
-  color: #fff;
-}
-a {
-  color: #20C20E;
-}
-#contact {
-  display: inline-block;
-  padding: 2px;
-}
-#content {
-  max-width: 1600px;
-  margin: 0 auto;
-  padding: 5em;
-}
-#cursor {
-  color: #fff;
-}
-#desc {
-  color: grey;
-}
-#title {
-  font-weight: bold;
-  font-size: 0.8em;
-  text-decoration: none;
-}
-#title::after {
-  content: "";
-  width: 3px;
-  height: 25px;
-  margin-left: 5px;
-  background: #fff;
-  display: inline-block;
-  vertical-align: top;
-  animation: cursor-blink 1.5s steps(2) infinite;
-}
-#blurb {
-  font-weight: bold;
-  font-size: 3em;
-  display: inline-block;
-}
-@keyframes cursor-blink {
-  0% {
-    opacity: 0;
-  }
-}
-@media only screen and (max-width: 600px) {
-  #content {
-    padding: 1em;
-  }
-}
+      html {
+        font-family: Inconsolata, monospace;
+        background-color: #111315;
+        color: #fff;
+      }
+      a {
+        color: #20c20e;
+      }
+      #contact {
+        display: inline-block;
+        padding: 2px;
+      }
+      #content {
+        max-width: 1600px;
+        margin: 0 auto;
+        padding: 5em;
+      }
+      #cursor {
+        color: #fff;
+      }
+      #desc {
+        color: grey;
+      }
+      #title {
+        font-weight: bold;
+        font-size: 0.8em;
+        text-decoration: none;
+      }
+      #title::after {
+        content: "";
+        width: 3px;
+        height: 25px;
+        margin-left: 8px;
+        margin-top: 2px;
+        background: #fff;
+        display: inline-block;
+        vertical-align: top;
+        animation: cursor-blink 1.5s steps(2) infinite;
+      }
+      #blurb {
+        font-weight: bold;
+        font-size: 3em;
+        display: inline-block;
+      }
+      @keyframes cursor-blink {
+        0% {
+          opacity: 0;
+        }
+      }
+      @media only screen and (max-width: 600px) {
+        #content {
+          padding: 1em;
+        }
+      }
     </style>
   </head>
   <body>
-      <div id="content">
-	  <div id="header">
-		  <h1><a href="/" id="title">CRUFTERS</a></h1>
-	  </div>
-	  <div id="main">
-            <h1 id="blurb">Build your dream</h1>
-	    <h3 id="desc">A world class startup hacker group</h3>
-	    <h4>By former operators at <a href="https://micro.dev">Micro</a></h4>
-	    <h4>Email us to <a href="mailto:hello@crufters.com" id="contact">start</a> your new project.</h4>
-	  </div>
+    <div id="content">
+      <div id="header">
+        <h1><a href="/" id="title">CRUFTERS</a></h1>
       </div>
+      <div id="main">
+        <h1 id="blurb">Build your dream</h1>
+        <h3 id="desc">A world class startup hacker group</h3>
+        <h4>By former operators at <a href="https://micro.dev">Micro</a></h4>
+        <br />
+        <h4>
+          Email us to
+          <a href="mailto:hello@crufters.com" id="contact">start</a> your new
+          project.
+        </h4>
+      </div>
+    </div>
   </body>
 </html>
