--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="startups, consulting, engineering" />
     <meta name="author" content="Crufters" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <style>
       html {
         font-family: Inconsolata, monospace;
@@ -74,13 +75,13 @@
       <div id="main">
         <h1 id="blurb">Build your dream</h1>
         <h3 id="desc">A world class startup hacker group</h3>
-        <h4>By former operators at <a href="https://micro.dev">Micro</a></h4>
+        <h3>By former operators at <a href="https://micro.dev">Micro</a></h3>
         <br />
-        <h4>
+        <h3>
           Email us to
           <a href="mailto:hello@crufters.com" id="contact">start</a> your new
           project.
-        </h4>
+        </h3s>
       </div>
     </div>
   </body>
