--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       #cursor {
         color: #fff;
       }
-      #desc {
+      #desc, #para {
         color: grey;
       }
       #title {
@@ -70,18 +70,23 @@
   <body>
     <div id="content">
       <div id="header">
-        <h1><a href="/" id="title">CRUFTERS</a></h1>
+        <h1><a href="https://github.com/crufters" id="title">CRUFTERS</a></h1>
       </div>
       <div id="main">
         <h1 id="blurb">Build your dream</h1>
         <h3 id="desc">A world class startup hacker group</h3>
-        <h3>By former operators at <a href="https://micro.dev">Micro</a></h3>
         <br />
+        <h4 id="para">
+          Have you ever wondered why even the biggest companies seem to deliver mediocre software?<br />
+          Unlike those companies, our group never lost the hacker mindset.<br />
+          Become so agile that Paul Graham writes articles about your company. We are here to help you achieve that.
+        </h4>
         <h3>
-          Email us to
-          <a href="mailto:hello@crufters.com" id="contact">start</a> your new
+          Email us if you need
+          <a href="mailto:dobronszki@gmail.com" id="contact">tech brainpower</a> for your
           project.
         </h3s>
+
       </div>
     </div>
   </body>
