--- a/index.html
+++ b/index.html
@@ -73,13 +73,11 @@
         <h1><a href="https://github.com/crufters" id="title">CRUFTERS</a></h1>
       </div>
       <div id="main">
-        <h1 id="blurb">Build your dream</h1>
-        <h3 id="desc">A world class startup hacker group</h3>
+        <h1 id="blurb">Build and win with us</h1>
+        <h3 id="desc">Deploy our hacker group</h3>
         <br />
         <h4 id="para">
-          Have you ever wondered why even the biggest companies seem to deliver mediocre software?<br />
-          Unlike those companies, our group never lost the hacker mindset.<br />
-          Become so agile that Paul Graham writes articles about your company. We are here to help you achieve that.
+          Become so agile that Paul Graham writes articles about your company.
         </h4>
         <h3>
           Email us if you need
